--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ env:
 install:
   # Roswell
   - curl -L https://raw.githubusercontent.com/roswell/roswell/release/scripts/install-for-ci.sh | sh
-  # prove
   - ros install fukamachi/rove
+  - ros install fukamachi/websocket-driver
 
 script:
   - rove jsonrpc.asd
