Use the latest dissect for SBCL 1.4.10.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ env:
 install:
   # Roswell
   - curl -L https://raw.githubusercontent.com/roswell/roswell/release/scripts/install-for-ci.sh | sh
+  - ros install Shinmera/dissect
   - ros install fukamachi/rove
-  - ros install fukamachi/websocket-driver
 
 script:
   - rove jsonrpc.asd
